--- a/GIMMRESORT/blog.html
+++ b/GIMMRESORT/blog.html
@@ -275,7 +275,18 @@
 							<a href="">
 								<img src="images/blog/h4.jpg" alt="">
 							</a>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+							<p>
+								<ul>
+								<li>Aire Acondicionado</li>
+ 								<li>Secador de pelo</li>
+ 								<li>Conexión a Internet con línea rápida</li>
+ 								<li>Baño con ducha</li>
+ 								<li>Dispositivo para el calentamiento espontáneo y aire acondicionado</li>
+ 								<li>Teléfono de línea directa</li>
+								<li>Tv al plasma</li>
+
+							</ul> 
+						</p>
 							<a  class="btn btn-primary" href="">Read More</a>
 						</div>
 						<div class="single-blog-post">
@@ -297,7 +308,19 @@
 							<a href="">
 								<img src="images/blog/h6.jpg" alt="">
 							</a>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+							<p> 
+							<ul>
+									<li>Aire Acondicionado</li>
+ 									<li>Secador de pelo</li>
+ 									<li>Conexión a Internet con línea rápida</li>
+ 									<li>Baño con ducha</li>
+									<li>Dispositivo para el calentamiento espontáneo y aire acondicionado</li>
+									<li>Teléfono de línea directa</li>
+ 									<li>Tv al plasma</li>
+ 									<li>Tv al plasma en el baño</li>
+ 									<li>Sofa-Cama para dos personas</li>
+ 								</ul>
+ 								</p>
 							<a  class="btn btn-primary" href="">Read More</a>
 						</div>
 						<div class="single-blog-post">
@@ -319,7 +342,19 @@
 							<a href="">
 								<img src="images/blog/h5.jpg" alt="">
 							</a>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+							<p>
+								<ul>
+										<li>Habitación para dos personas</li>
+										<li>Sala de estar con sofá-cama para dos personas</li>
+										<li>Cuarto de baño con bañera jacuzzi y ducha</li> 
+ 										<li>Aire acondicionado</li>
+										<li>Secador de pelo</li>
+										<li>Conexión a Internet de velocidad de línea (gratis)</li>
+										<li>Dispositivo para la auto-calefacción y aire acondicionado</li>
+										<li>Mini-bar</li>
+										<li>Espejo retroiluminado</li>
+								</ul>
+							</p>
 							<a  class="btn btn-primary" href="">Read More</a>
 						</div>
 						<div class="pagination-area">
