--- a/GIMMRESORT/blog.html
+++ b/GIMMRESORT/blog.html
@@ -283,7 +283,7 @@
  								<li>Baño con ducha</li>
  								<li>Dispositivo para el calentamiento espontáneo y aire acondicionado</li>
  								<li>Teléfono de línea directa</li>
-								<li>Tv al plasma</li>
+								<li>Tv plasma</li>
 
 							</ul> 
 						</p>
@@ -316,8 +316,8 @@
  									<li>Baño con ducha</li>
 									<li>Dispositivo para el calentamiento espontáneo y aire acondicionado</li>
 									<li>Teléfono de línea directa</li>
- 									<li>Tv al plasma</li>
- 									<li>Tv al plasma en el baño</li>
+ 									<li>Tv plasma</li>
+ 									<li>Tv plasma en el baño</li>
  									<li>Sofa-Cama para dos personas</li>
  								</ul>
  								</p>
@@ -353,6 +353,9 @@
 										<li>Dispositivo para la auto-calefacción y aire acondicionado</li>
 										<li>Mini-bar</li>
 										<li>Espejo retroiluminado</li>
+										<li>Tv plasma</li>
+ 										<li>Tv plasma en el baño</li>
+
 								</ul>
 							</p>
 							<a  class="btn btn-primary" href="">Read More</a>
