--- a/GIMMRESORT/login.html
+++ b/GIMMRESORT/login.html
@@ -148,7 +148,7 @@
 						<h2>Login to your account</h2>
 						<form action="#">
 							<input type="text" placeholder="Name" />
-							<input type="email" placeholder="Email Address" />
+							<input type="password" placeholder="password" />
 							<span>
 								<input type="checkbox" class="checkbox">
 								Keep me signed in
@@ -166,7 +166,8 @@
 						<form action="#">
 							<input type="text" placeholder="Name"/>
 							<input type="email" placeholder="Email Address"/>
-							<input type="password" placeholder="Password"/>
+							<input type="text" placeholder="password"/>
+							<input type="text" placeholder="telefono"/>
 							<button type="submit" class="btn btn-default">Signup</button>
 						</form>
 					</div><!--/sign up form-->
