--- a/GIMMRESORT/login.html
+++ b/GIMMRESORT/login.html
@@ -145,13 +145,13 @@
 			<div class="row">
 				<div class="col-sm-4 col-sm-offset-1">
 					<div class="login-form"><!--login form-->
-						<h2>Login to your account</h2>
+						<h2>Login</h2>
 						<form action="#">
-							<input type="text" placeholder="Name" />
-							<input type="email" placeholder="Email Address" />
+							<input type="email" placeholder="Email" name="Correo" value=""/>
+							<input type="password" placeholder="Password" name="Pass" value=""/>
 							<span>
 								<input type="checkbox" class="checkbox">
-								Keep me signed in
+								Keep Session
 							</span>
 							<button type="submit" class="btn btn-default">Login</button>
 						</form>
@@ -162,12 +162,15 @@
 				</div>
 				<div class="col-sm-4">
 					<div class="signup-form"><!--sign up form-->
-						<h2>New User Signup!</h2>
-						<form action="#">
-							<input type="text" placeholder="Name"/>
-							<input type="email" placeholder="Email Address"/>
-							<input type="password" placeholder="Password"/>
-							<button type="submit" class="btn btn-default">Signup</button>
+						<h2>Signup</h2>
+						<form action="./php/Func.php" method="POST">
+							<input type="text" placeholder="Name" name="Nombre" value=""/>
+							<input type="text" placeholder="Second Name" name="Apellido" value=""/>
+							<input type="text" placeholder="Phone Number" name="Telefono" value=""/>
+							<input type="text" placeholder="Direction" name="Direccion" value=""/>
+							<input type="email" placeholder="Email" name="Correo" value=""/>
+							<input type="password" placeholder="Password" name="Pass" value=""/>							
+							<button type="submit" name="Boton" value=1 class="btn btn-default">Signup</button>
 						</form>
 					</div><!--/sign up form-->
 				</div>
